23 Dec 2008 Allow symbol substitution in OAT files - Roger Bowler
22 Dec 2008 Implement Compare And Swap And Store Facility 2 - Ivan Warren
21 Dec 2008 Diag 224 fix - Ivan Warren
21 Dec 2008 Various SERVC READ_xxx_INFO fixes for specialty engines - Ivan Warren
08 Dec 2008 Fix Issue with ESA Guest on z/Arch and >2GB Storage - Ivan Warren
06 Dec 2008 Enable STFLE in ESA/390 mode - Ivan Warren
04 Dec 2008 Add ability to configure group name in --enable-setuid-hercifc= - Roger Bowler
02 Dec 2008 Support for PANTITLE when console is an xterm window - Roger Bowler
24 Nov 2008 Add processor type IL for IFL on engines statement - Jan Jaeger
02 Nov 2008 Correction to dasdtab entries for 3375 and 3380 - Roger Bowler
01 Nov 2008 Fix tapedev gettapetype_bydata function for HET/AWS tapes that
            start with a tapemark -- Liam Cold [liamcold@yahoo.com] by Fish
26 Oct 2008 Store_is within CMPSC will zero the remaining bits in the working byte,
            just like other famous manufacturers will do. All former generated compressed
            code will expand correctly, don't worry!! But their can be a difference
            in the compressed output. (This is the case when bits are on, but those
            are the unused bits after the last index symbol). - Bernard van der Helm
24 Oct 2008 Fix RC file not processed nor HAO thread engaged if -d daemon mode - Fish
11 Oct 2008 Fix MSVC build failure when 'rebase' utility doesn't exist - Fish
07 Sep 2008 Fix zero ilc problem after branch trace - Greg
04 Sep 2008 Fix 64-bit length problem in cdsk_valid_trk - Tony Harminc by Greg
29 Aug 2008 Panel display extended cursor handling (Windows only) - Fish
29 Aug 2008 Fix message-keep logic (sticky/held messages) - Fish
29 Aug 2008 Fix some New Panel data input painting issues - Fish
23 Aug 2008 Implemented sticky and held messages completed - Bernard van der Helm
22 Aug 2008 Fix TOD clock race condition identified by Fred Feucht