@@ -57,6 +57,7 @@ HOSTOSREL : The Host operating system release
 HOSTOSVER : The host operating system version
 HOSTARCH : The host architecture
 HOSTNUMCPUS : UP (for 1) or MP=X (for more than 1)
+LPARNAME : The LPAR name specified in the configuration file
 CCUU,ccuu,CUU,cuu : Various forms of the device number of the terminal
 CSS : The Logical Channel Subsystem Set or Channel Set for the terminal
 SUBCHAN : The Subchannel number for the terminal
