@@ -1,3 +1,4 @@
+30 Dec 2008 Allow $(LPARNAME) in herclogo file - Roger Bowler
 23 Dec 2008 Allow symbol substitution in OAT files - Roger Bowler
 22 Dec 2008 Implement Compare And Swap And Store Facility 2 - Ivan Warren
 21 Dec 2008 Diag 224 fix - Ivan Warren
